--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,9 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.bootstrap-dialog {
+  border-radius: 1rem;
+  padding: 0;
+  overflow: hidden;
+}
