--- a/src/app/private/pages/rol/rol.component.html
+++ b/src/app/private/pages/rol/rol.component.html
@@ -96,11 +96,7 @@
                         width="80"
                         [resizeable]="false"
                         [draggable]="false"
-                        [canAutoResize]="false"
-                    >
-                        <ng-template let-value="value" ngx-datatable-cell-template>
-                            <p>{{ value }}</p>
-                        </ng-template>
+                        [canAutoResize]="false">
                     </ngx-datatable-column>
                 }
                 
@@ -110,9 +106,6 @@
                     [resizeable]="false"
                     [draggable]="false"
                 >
-                    <ng-template let-value="value" ngx-datatable-cell-template>
-                        <p>{{ value }}</p>
-                    </ng-template>
                 </ngx-datatable-column>
 
                 @if(bState)
@@ -123,9 +116,6 @@
                         [resizeable]="false"
                         [draggable]="false"
                     >
-                        <ng-template let-value="value" ngx-datatable-cell-template>
-                            <p>{{ value }}</p>
-                        </ng-template>
                     </ngx-datatable-column>
                 }
 
@@ -165,58 +155,7 @@
                     </ng-template>
                 </ngx-datatable-column>
             </ngx-datatable>
-            <!-- <table mat-table [dataSource]="dataSource">
-                <ng-container matColumnDef="Nro">
-                    <th mat-header-cell *matHeaderCellDef> No. </th>
-                    <td mat-cell *matCellDef="let element"> {{roles.indexOf(element) + 1}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="Id">
-                    <th mat-header-cell *matHeaderCellDef> Id </th>
-                    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="Nombre">
-                    <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                    <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="Estado">
-                    <th mat-header-cell *matHeaderCellDef> Estado </th>
-                    <td mat-cell *matCellDef="let element"> {{element.estado}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="Accion">
-                    <th mat-header-cell *matHeaderCellDef> Acciones </th>
-                    <td mat-cell *matCellDef="let element">
-                        <button class="btn" (click)="AgregarPermisoRol(element.id)" title="Asignar menu"
-                            style="background-color: var(--color-principal); color: var(--color-terciario);">
-                            <i class="bi bi-menu-button"></i>
-                        </button>
-                        <button class="btn m-1" (click)="EditarRol(element.id)" title="Editar"
-                            style="background-color: var(--color-principal); color: var(--color-terciario);">
-                            <i class="bi bi-pencil-square"></i>
-                        </button>
-                        <button class="btn" (click)="EliminarRol(element.id)" title="Eliminar"
-                            style="background-color: var(--color-principal); color: var(--color-terciario);">
-                            <i class="bi bi-trash" *ngIf="element.estado.substring(0, 1) == 'A'; else icono_else"></i>
-                            <ng-template #icono_else>
-                                <i class="bi bi-check-circle"></i>
-                            </ng-template>
-                        </button>
-                    </td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-
-            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
-                aria-label="Select page of periodic elements">
-            </mat-paginator> -->
         </div>
     </section>
-
-    <!-- <app-rol-minicard-component [RolFiltrados]="RolFiltrados"></app-rol-minicard-component> -->
 
 </div>
