update: arreglando default component y filtros solo desktop

--- a/src/app/private/pages/layout/layout.component.html
+++ b/src/app/private/pages/layout/layout.component.html
@@ -40,6 +40,7 @@
                 </mat-accordion>
             </div>
         </mat-drawer>
-        <router-outlet></router-outlet>
+        <router-outlet>
+        </router-outlet>
     </mat-drawer-container>
 </div>
