--- a/src/app/private/pages/categoria/categoria.component.html
+++ b/src/app/private/pages/categoria/categoria.component.html
@@ -6,22 +6,20 @@
     <form [formGroup]="formulario">
         <div class="row g-2 d-flex justify-content-between">
             <div class="col-xs-4 col-sm-8 col-md-4 col-xl-4">
-                <div class="form-floating">
-                    <input type="text" class="form-control" id="nombre" placeholder="Nombre..."
-                        formControlName="nombre">
-                    <label for="nombre">Nombre...</label>
-                </div>
+                <label for="nombre">Filtrar por:</label>
+                <input type="text" class="form-control" id="nombre" placeholder="Nombre"
+                    formControlName="nombre">
             </div>
-            <div class="col-xs-4 col-sm-2 col-md-6 col-xl-6 d-flex justify-content-end">
+            <!-- <div class="col-xs-4 col-sm-2 col-md-6 col-xl-6 d-flex justify-content-end">
                 <button (click)="ObtenerCategoria()" class="btn"
                     style="height: 58px; width:  58px; background-color: var(--color-principal);">
                     <i class="bi bi-search" style="color: var(--color-terciario); font-size: 20px;"></i>
                 </button>
-            </div>
+            </div> -->
         </div>
     </form>
-    <section class="row g-2 mt-3">
-        <div class="d-flex justify-content-end">
+    <section class="row g-2 mt-1">
+        <div class="d-flex">
             <button class="btn" (click)="AgregarCategoria()"
                 style="background-color: var(--color-principal); color: var(--color-terciario);">
                 <i class="bi bi-plus"></i>
