--- a/src/app/private/pages/default/default.component.html
+++ b/src/app/private/pages/default/default.component.html
@@ -1,3 +1,4 @@
-<div class="d-grid place-items-center">
-  <h1>Seleccione una opción del menú</h1>
+<div class="h-100 d-flex flex-column align-items-center justify-content-center">
+  <h1 class="text-center">Bienvenido, {{ userFullName }}</h1>
+  <p class="text-center">Por favor selecciona una opción del menú para continuar</p>
 </div>
