--- a/src/app/private/pages/mesa/mesa.component.html
+++ b/src/app/private/pages/mesa/mesa.component.html
@@ -5,24 +5,23 @@
     </section>
     <form [formGroup]="formulario">
         <div class="row g-2 d-flex justify-content-between">
-            <div class="col-xs-4 col-sm-8 col-md-4 col-xl-4">
-                <div class="form-floating">
-                    <input type="email" class="form-control" id="sucursal" placeholder="Nombre..."
-                        formControlName="nombre">
-                    <label for="sucursal">Nombre...</label>
-                </div>
+            <div class="col-xs-4 col-sm-8 col-md-4 col-xl-3">
+                <label for="sucursal">Filtrar por:</label>
+                <input type="email" class="form-control" id="sucursal" placeholder="Nombre"
+                    formControlName="nombre">
             </div>
-            <div class="form-floating col-xs-4 col-sm-6 col-md-3 col-xl-3">
+            <div class="col-xs-4 col-sm-6 col-md-3 col-xl-3">
+                <label for="floatingSelect">Filtrar por:</label>
                 <select class="form-select" formControlName="sucursal" id="rol" id="floatingSelect"
                     aria-label="Floating label select example" (change)="ObtenerPiso($event)">
-                    <option value="0" selected>Seleccione</option>
+                    <option value="0" selected>Sucursal</option>
                     <option *ngFor="let sucursal of this.Sucursales" value="{{sucursal.id}}">
                         {{sucursal.nombre}}
                     </option>
                 </select>
-                <label for="floatingSelect">Sucursal...</label>
             </div>
-            <div class="form-floating col-xs-4 col-sm-6 col-md-3 col-xl-3">
+            <div class="col-xl-6"></div>
+            <!-- <div class="form-floating col-xs-4 col-sm-6 col-md-3 col-xl-3">
                 <select class="form-select" formControlName="piso" id="rol" id="floatingSelect"
                     *ngIf="this.pisos.length > 0" aria-label="Floating label select example">
                     <option value="0" selected>Seleccione</option>
@@ -31,17 +30,17 @@
                     </option>
                 </select>
                 <label *ngIf="this.pisos.length > 0" for="floatingSelect">Piso...</label>
-            </div>
-            <div class="col-xs-4 col-sm-2 col-md-4 col-xl-2 d-flex justify-content-end">
+            </div> -->
+            <!-- <div class="col-xs-4 col-sm-2 col-md-4 col-xl-2 d-flex justify-content-end">
                 <button (click)="ObtenerMesa()" class="btn"
                     style="height: 58px; width:  58px; background-color: var(--color-principal);">
                     <i class="bi bi-search" style="color: var(--color-terciario); font-size: 20px;"></i>
                 </button>
-            </div>
+            </div> -->
         </div>
     </form>
-    <section class="row g-2 mt-3">
-        <div class="d-flex justify-content-end">
+    <section class="row g-2 mt-1">
+        <div class="d-flex justify-content-start">
             <button class="btn" (click)="AgregarMesa()"
                 style="background-color: var(--color-principal); color: var(--color-terciario);">
                 <i class="bi bi-plus"></i>
