--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,18 @@
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 
-// html {
+
+              // "node_modules/bootstrap/scss/bootstrap.scss",
+              // "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
+              // "node_modules/@siemens/ngx-datatable/index.css",
+              // "node_modules/@siemens/ngx-datatable/themes/material.scss",
+              // "node_modules/@siemens/ngx-datatable/assets/icons.css",
+
+@use 'bootstrap/scss/bootstrap.scss';
+@use 'bootstrap-icons/font/bootstrap-icons.scss';
+@use '@siemens/ngx-datatable/index.scss';
+@use '@siemens/ngx-datatable/themes/material.scss';
+@import url('../node_modules/@siemens/ngx-datatable/assets/icons.css');
 //   @include mat.theme((color: (theme-type: light,
 //         primary: mat.$azure-palette,
 //         tertiary: mat.$blue-palette,
